# neomason-discord-bot

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/: V1__initial.sql  V2__guildid.sql
src/: main.rs
