[package]
authors = ["Marcel Guzik <mguzik555@gmail.com>"]
edition = "2018"
name = "neomason-discord-bot"
version = "0.1.0"
[dependencies]
dotenv = "0.15.0"
env_logger = "*"
rusqlite = "0.23.1"
fancy-regex = "0.3.5"
serenity = "0.8.9"
log = "0.4"
chrono = "0.4.19"

[dependencies.refinery]
features = ["rusqlite"]
version = "0.3"