[package]
authors = ["Marcel Guzik <mguzik555@gmail.com>"]
edition = "2018"
name = "neomason-discord-bot"
version = "0.1.0"
[dependencies]
dotenv = "0.15.0"
env_logger = "*"
rusqlite = "0.25"
fancy-regex = "0.6"
log = "0.4"
chrono = "0.4.19"
rand = "0.8.4"
tokio = { version = "1.8.0", features = ["full"] }

[dependencies.refinery]
features = ["rusqlite"]
version = "0.6"

[dependencies.serenity]
version = "0.10.8"
