[package]
authors = ["Marcel Guzik <mguzik555@gmail.com>"]
edition = "2021"
name = "neomason-discord-bot"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.1"
rusqlite = "0.27.0"
fancy-regex = "0.10.0"
log = "0.4"
chrono = "0.4.22"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
serenity = "0.11.5"
refinery = { version = "0.8.6", features = ["rusqlite"] }
